# vmod-fileserver

./: Cargo.toml  Dockerfile  README.md  default.vcl  justfile  vmod.vcc
.github/workflows/: ci.yml  dependabot.yml  tests.yaml
docker/: Dockerfile  startup.sh
pkg/alpine/: APKBUILD
pkg/arch/: PKGBUILD
src/: lib.rs
tests/: bad1.types  good1.types  test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc
