[package]
name = "vmod_fileserver"
version = "0.0.6"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
chrono = "0.4.23"
varnish = { git = "https://github.com/gquintard/varnish-rs.git", branch = "feature-macro"}
varnish-macros = { git = "https://github.com/gquintard/varnish-rs.git", branch = "feature-macro" }
varnish-sys = { git = "https://github.com/gquintard/varnish-rs.git", branch = "feature-macro"}

[lib]
crate-type = ["cdylib"]
