[package]
name = "vmod_fileserver"
version = "0.0.8"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
chrono = "0.4.23"
varnish = { version = "0.4.0", features = ["ffi"] }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
